minor change to README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# Note: Yaku-NS is a 10 years old project. It is here for personal "historical" reasons, as this is one of the first non trivial C projects I wrote.
+*******************
+Note: Yaku-NS is a 10 years old project. It is here for personal "historical" reasons, as this is one of the first non trivial C projects I wrote.
+*******************
 
 +==================================================+
 |                     WARNING                      |
